--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Электронные инвойсы с интеграцией KSeF" />
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
